Preserving the state of recyclerview and the layout for tablet, also implementing some of the suggestions done by the instructor and fixing some of the problems with the video

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="favorite_key">favorite</string>
     <string name="preferences_file">pm_prefs.xml</string>
     <string name="unknown_duration">Duration: Unknown</string>
+    <string name="network_not_available_txt">Network not found, please connect to the internet and try again</string>
 </resources>
